FIX: improved readability in configurator UI

--- a/nerdpage-files/css/style.css
+++ b/nerdpage-files/css/style.css
@@ -32,7 +32,7 @@ header {
 	display: flex;
 	justify-content: space-between;
 
-	opacity: 60%;
+	opacity: 0.7;
 
 	margin: 15px 25px;
 	margin-bottom: 20px;
@@ -95,11 +95,11 @@ main {
 	width: 100%;
 	border: none;
 	cursor: pointer;
-	opacity: 0.1;
+	opacity: 0.15;
 }
 
 #configure-button:hover {
-	opacity: 0.2;
+	opacity: 0.4;
 }
 
 
@@ -128,22 +128,6 @@ main {
 	border: 1px solid color-mix(in srgb, var(--fg-color), transparent 90%);
 }
 
-.configure-actions {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	padding-top: 16px;
-}
-
-.configure-actions > * {
-	width: 100%;
-	color: color-mix(in srgb, var(--fg-color), transparent 90%);
-}
-
-.configure-actions > a:first-child {
-	color: color-mix(in srgb, var(--fg-color), transparent 75%);
-}
-
 #configure-input {
 	flex: 1;
 	border: none;
@@ -155,6 +139,29 @@ main {
 
 #configure-input::placeholder {
 	color: color-mix(in srgb, var(--fg-color), transparent 90%);
+}
+
+.configure-actions {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 16px;
+	padding: 8px;
+	border: 1px solid color-mix(in srgb, var(--fg-color), transparent 90%);
+}
+
+.configure-actions > a {
+	width: 100%;
+	color: var(--fg-color);
+	opacity: 0.15;
+}
+
+.configure-actions > .configure-actions-highlight {
+	opacity: 0.4;
+}
+
+.configure-actions > .configure-actions-selected {
+	opacity: 1.00;
 }
 
 .hidden { display: none !important; }
